--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
