--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-query": "^3.9.6",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
