--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^6.15.1",
     "react-query": "^3.9.6",
     "react-scripts": "4.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
